--- a/package.json
+++ b/package.json
@@ -18,11 +18,20 @@
   },
   "homepage": "https://github.com/Tab-Al/Driver-App-Mongoose-Node-#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
+    "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.2",
+    "crypto": "^1.0.1",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mocha": "^8.0.1",
     "mongoose": "^5.9.18",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "supertest": "^4.0.2"
   }
 }
